Changelog
=========


2.3.1 (unreleased)
------------------

- Use z2 Server to be closer to the real world in tests. [mathias.leimgruber]


2.3.0 (2020-01-23)
------------------

- Remove drag and drop upload to reduce support overhead (it only worked in Plone 4). [djowett-ftw]

2.2.6 (2020-01-21)
------------------

- Override content_type method to fix mime_type metadata. [tinagerber]


2.2.5 (2020-01-09)
------------------

- Add ftw.file portal_type translation to plone domain. [tinagerber]


2.2.4 (2019-12-18)
------------------

- Remove JavaScript console statement (YAY) which accidentally added in the prior release. [jone]

- Replace the upload utility with a separate package to prevent conflicts [Nachtalb]


2.2.3 (2019-12-16)
------------------

- Plone 5: provide precompiled bundle. [jone]

- Fix deleting Plone site. [jone]


2.2.2 (2019-11-26)
------------------

- Fix upgrade steps that wouldn't run in 2.x codebase. [djowett-ftw]


2.2.1 (2019-11-25)
------------------

- Fix ConfigurationConflictError occurring when plone.app.widgets added in Plone 4.
  [djowett-ftw]
- Pin plone.protect to minimum version supplying IDisableCSRFProtection
  [djowett-ftw]


2.2.0 (2019-11-14)
------------------

- Add a FileUpload adaptor for plone.namedfile so that ftw.file uploads can
  work in ftw.simplelayout's FileListingBlock. [djowett-ftw]
- Fix contentType attribute type. It needs to be utf-8 for the zope.schema.BytesLine. [mathias.leimgruber]
- Remove ftw.calendarwidget dependency [Nachtalb]


2.1.0 (2019-11-12)
------------------

- Add support for Plone 5.1. [buchi]


2.0.3 (2019-11-05)
------------------

- DX migration: ignore flowplayer fields (``width`` and ``height``). [jone]


2.0.2 (2019-11-05)
------------------

- Fix ftw.theming integration [mathias.leimgruber]
- Fix incorrect ID in FTI definition. [jone]
- Dexterity migration: import GS profile even when not migrating content. [jone]


2.0.1 (2019-11-04)
------------------
